# chess

./: .gitignore  README.md  main.py  pyproject.toml
engine/: chess_engine.py  valid_moves.py
src/: __init__.py  config.py  main.py  startup.py
src/ai/: __init__.py  chess_ai.py  position_evaluator.py
src/engine/: __init__.py  board_manager.py  chess_engine.py  game_state.py  move_validator.py  rules_engine.py  valid_moves.py
